<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.vertx.cryptobuyer</groupId>
        <artifactId>crypto-buyer</artifactId>
        <version>${revision}</version>
    </parent>

    <artifactId>application</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <main.verticle>io.vertx.skeleton.framework.SpineVerticle</main.verticle>
        <launcher.class>io.vertx.skeleton.framework.SkeletonLauncher</launcher.class>
        <docker.image.name>crypto-buyer</docker.image.name>
        <base.image>
            eclipse-temurin:17.0.4.1_1-jre-alpine@sha256:4553cd9febc1ef25f54407ff17b18be1eefc5c9f80afc699f87fcbb8d89ae407
        </base.image>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.vertx.skeleton</groupId>
            <artifactId>vertx-framework</artifactId>
        </dependency>
      <dependency>
        <groupId>io.vertx.cryptobuyer</groupId>
        <artifactId>infrastructure</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.vertx.cryptobuyer</groupId>
        <artifactId>domain</artifactId>
        <version>1.0.0-SNAPSHOT</version>
      </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <target>17</target>
                    <release>17</release>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${maven-shade-plugin.version}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Main-Class>${launcher.class}</Main-Class>
                                        <Main-Verticle>${main.verticle}</Main-Verticle>
                                    </manifestEntries>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                            <outputFile>${project.build.directory}/${docker.image.name}-${project.version}-fat.jar</outputFile>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <includes>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>${exec-maven-plugin.version}</version>
                <configuration>
                    <mainClass>${launcher.class}</mainClass>
                    <arguments>
                        <argument>run</argument>
                        <argument>${main.verticle}</argument>
                    </arguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>${jib-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>dockerBuild</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <from>
                        <image>${base.image}</image>
                    </from>
                    <to>
                        <image>${docker.image.name}</image>
                        <tags>
                            <tag>latest</tag>
                            <tag>${project.version}</tag>
                        </tags>
                    </to>
                    <container>
                        <extraClasspath>/customizations/*</extraClasspath>
                        <mainClass>${launcher.class}</mainClass>
                        <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
                        <jvmFlags>
                            <jvmFlag>-XX:+UseZGC</jvmFlag>
                        </jvmFlags>
                        <args>
                            <arg>run</arg>
                            <arg>${main.verticle}</arg>
                        </args>
                        <ports>
                            <port>8080</port>
                        </ports>
                        <environment>
                            <REVISION>${project.version}</REVISION>
                        </environment>
                    </container>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
